--- a/YiDianMing/app/src/main/res/layout/add_student.xml
+++ b/YiDianMing/app/src/main/res/layout/add_student.xml
@@ -11,7 +11,7 @@
         android:layout_width="180dp"
         android:layout_height="230dp"
         android:layout_gravity="center"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/unnamed" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
